<resources>
    <string name="app_name">perfloc</string>

    <string name="dots_file_name">_Dots</string>
    <string name="wifi_file_name">_WiFi</string>
    <string name="sensors_file_name">_Sensors</string>
    <string name="cellular_file_name">_Cellular</string>
    <string name="metadata_file_name">_Metadata</string>
    <string name="gps_file_name">_Gps</string>
    <string name="file_extension">pbs</string> <!--(p)rotocol(b)uffer(s)erialized-->

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="flush_files">Flush Files</string>
    <string name="renew_files">Renew Files</string>
    <string name="SensorFrequency">Sensor Frequency</string>
    <string name="UnindexFiles">Un-index Files</string>
    <string name="set_prefix">Set File Prefix</string>
    <string name="count_messages">Count Messages</string>
    <string name="save_metadata">Save Metadata</string>
</resources>
