<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" tools:context=".MainActivity">
    <item android:id="@+id/action_settings" android:title="@string/action_settings"
        android:orderInCategory="100" android:showAsAction="never" />
    <item android:id="@+id/flush_files" android:title="@string/flush_files"
        android:orderInCategory="100" android:showAsAction="never" />
    <item android:id="@+id/renew_files" android:title="@string/renew_files"
        android:orderInCategory="100" android:showAsAction="never" />
    <item android:id="@+id/set_sensor_freq" android:title="@string/SensorFrequency"
        android:orderInCategory="100" android:showAsAction="never" />
    <item android:id="@+id/unindex_files" android:title="@string/UnindexFiles"
        android:orderInCategory="100" android:showAsAction="never" />
    <item android:id="@+id/set_prefix" android:title="@string/set_prefix"
        android:orderInCategory="100" android:showAsAction="never" />
</menu>
